--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 .App {
-  text-align: center;
+  padding-bottom: 5em;
 }
 
 .App-logo {
@@ -12,6 +12,7 @@
   height: 150px;
   padding: 20px;
   color: white;
+  margin-bottom: 3em;
 }
 
 .App-title {
@@ -25,4 +26,12 @@
 @keyframes App-logo-spin {
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
+}
+
+.quote {
+  border: 1px solid #999;
+  border-radius: 4px;
+
+  padding: 1em;
+  margin: 1em;
 }
